--- a/Angeli Alura/index.html
+++ b/Angeli Alura/index.html
@@ -8,19 +8,17 @@
     <link rel=”stylesheet” href=”style.css”>
 </head>
 <body>
+    <h2 class=”titulo-principal”>Meus Objetivos do ano<span>_<span></h2>
     <section class=”conteudo-principal”></section>
     <h2 class=”titulo-principal”>Meus Objetivos do ano_</h2>
     
     <div class=”botoes”>
         <button class=”botao”>Cursos na Alura</button>
-        <button class=”botao”>Criar projetos em JavaScript<
+        <button class=”botao”>Criar projetos em JavaScript
         button>
         <button class=”botao”>Criar um portfólio</button>
         <button class=”botao”>Atualizar meu currículo</button>
         </div> 
-
-        background-color: var(--cor-de-fundo);
-color: var(--branco); font-family: ‘Chakra Petch’, sans-serif;
-
+        
 </body>
 </html>
