--- a/Angeli Alura/index.html
+++ b/Angeli Alura/index.html
@@ -19,5 +19,14 @@
         <button class=”botao”>Atualizar meu currículo</button>
         </div> 
         
+        <div class=»botoes»>
+            <button class=»botao ativo»>Cursos na Alura</button>
+            <button class=»botao»>Criar projetos em JavaScript<
+            button>
+            <button class=»botao»>Criar um portfólio</button>
+            <button class=»botao»>Atualizar meu currículo<
+            button>
+            </div>
+
 </body>
 </html>
