--- a/Angeli Alura/index.html
+++ b/Angeli Alura/index.html
@@ -12,7 +12,7 @@
     <section class=”conteudo-principal”></section>
     
     <div class=”botoes”>
-        <button class=”botao”>Cursos na Alura</button>
+        <button class=”botao ativo”>Cursos na Alura</button>
         <button class=”botao”>Criar projetos em JavaScript
         button>
         <button class=”botao”>Criar um portfólio</button>
@@ -27,6 +27,6 @@
             <button class=»botao»>Atualizar meu currículo<
             button>
             </div>
-
+            <script src=»main.js»></script>
 </body>
 </html>
